tests/NormalTests/paczka1/fuzzy1/18788103.err
Error in line 3: ViZdT5Flv S970 73,5
Error in line 17: P4jlWrR S970 53,5
Error in line 28: aN9r A59 375,4
Error in line 34: aN9r S970 51,9
Error in line 36: A59 S970 48,3
Error in line 35: aN9r A979 72,2
